--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,15 +2,47 @@
   <div class="card-body">
     <h5 class="card-title"> {{ card.title }}</h5>
     <p class="card-text"> {{ card.description }}</p>
+   
+
+    <!-- <form (ngSubmit)="onCreate(form)" #form="ngForm">
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="title" name="title" class="form-control" id="title" [(ngModel)]="card.title" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="title">Description</label>
+          <textarea rows="4" cols="50" name="description" class="form-control" id="description" [(ngModel)]="card.description" required></textarea>
+        
+        </div>
+      
+
+      <div class="form-group">
+        <label for="list">List</label>
+        <select name="list" class="form-control" id="list" [(ngModel)]="card.list" required>
+          <option value="ToDo">ToDo</option>
+          <option value="WorkInProgress">WorkInProgress</option>
+          <option value="Done">Done</option>
+        </select>
+      </div>
+    
+  
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-success" [disabled]="!form.valid">Save</button>
+      </div>
+
+    </div>
+    </form> -->
+
+    <app-card-item [card]="card"></app-card-item>
 
     <button (click)="onDelete()" class="btn btn-danger btn-sm mr-1">
       <i class="fas fa-trash"></i>
       Delete
     </button>
 
-    <button (click)="onEdit()" class="btn btn-secondary btn-sm">
-      <i class="fas fa-edit"></i>
-      Edit
-    </button>
+   
   </div>
 </div>
+
